# tsclientlib

./: .editorconfig  .gitmodules  .rustfmt.toml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  tslientlib.code-workspace
.appveyor/: linux.yml  windows.yml
.cargo/: config
analyzer/: Cargo.toml
analyzer/src/: main.rs
declarations/: BookDeclarations.txt  ErrorDeclarations.txt  MessageDeclarations.txt  PermissionDeclarations.txt  message_parser.rs
gst-plugin-ts3/: Cargo.toml
gst-plugin-ts3/src/: demuxer.rs  lib.rs
tools/: measure-latency.sh
tsclientlib/: Cargo.toml  README.md  README.tpl
tsclientlib-ffi/: Cargo.toml  ffigen.cs  header.cs
tsclientlib-ffi/src/: events.rs  ffi_utils.rs  lib.rs  special_types.rs
tsclientlib/examples/: audio-latency.rs  audio.rs  channeltree.rs  many.rs  simple-sync.rs  simple.rs  sync.rs
tsclientlib/examples/audio_utils/: audio_to_ts.rs  mod.rs  ts_to_audio.rs
tsclientlib/src/: audio.rs  codec.rs  data.rs  events.rs  facades.rs  filetransfer.rs  lib.rs  packet_handler.rs  prelude.rs  resolver.rs  structs.rs  sync.rs  tests.rs
tsproto/: Cargo.toml  README.md  README.tpl
tsproto-audio/: Cargo.toml
tsproto-audio/src/: audio_to_ts.rs  lib.rs  ts_to_audio.rs
tsproto-bookkeeping/: Cargo.toml
tsproto-bookkeeping/examples/: simple.rs
tsproto-bookkeeping/src/: lib.rs  structs.rs
tsproto-commands/: Cargo.toml
tsproto-commands/src/: codec.rs  errors.rs  lib.rs  messages.rs  permissions.rs  structs.rs  versions.rs
tsproto-util/: Cargo.toml
tsproto-util/src/: BookDeclarations.tt  BookFfi.tt  ConnectionManagerGetters.tt  ErrorDeclarations.tt  FacadeDeclarations.tt  MessageDeclarations.tt  MessagesToBook.tt  PacketDeclarations.tt  PermissionDeclarations.tt  VersionDeclarations.tt  book_ffi.rs  book_parser.rs  connection_manager_getters.rs  error_parser.rs  facade_parser.rs  lib.rs  message_parser.rs  messages_to_book_parser.rs  packets_parser.rs  permission_parser.rs  version_parser.rs
tsproto/benches/: command.rs  connect.rs  license.rs  message.rs  modpow.rs
tsproto/benches/utils/: mod.rs
tsproto/examples/: benchmark.rs  client.rs  connect-bench.rs  decompress.rs  flood.rs  many-tsproto.rs  many.rs  message-bench.rs  msg-benchmark.rs  parse-license.rs  test-decrypt.rs  test-ed25519.rs  test-new-decrypt.rs  test-proofs.rs  voice-client.rs
tsproto/examples/utils/: mod.rs  voice.rs
tsproto/src/: algorithms.rs  client.rs  commands.rs  connection.rs  connectionmanager.rs  crypto.rs  handler_data.rs  lib.rs  license.rs  log.rs  packet_codec.rs  packets.rs  resend.rs  utils.rs
utils/analyzer/: Cargo.toml
utils/analyzer/src/: main.rs
utils/cli-completer/: Cargo.toml
utils/cli-completer/examples/: test.rs
utils/cli-completer/src/: lib.rs
utils/dev-client/: .gitignore  Cargo.toml
utils/dev-client/src/: colors.rs  main.rs  table_widget.rs  text_widget.rs  ui.rs
utils/ffigen/: Cargo.toml
utils/ffigen-derive/: Cargo.toml
utils/ffigen-derive/src/: lib.rs
utils/ffigen/src/: CSharp.tt  Gen.tt  Rust.tt  csharp.rs  lib.rs  rust.rs
utils/gst-plugin-ts3/: Cargo.toml
utils/ts-bookkeeping/: Cargo.toml  README.md  README.tpl
utils/ts-bookkeeping/benches/: command.rs
utils/ts-bookkeeping/src/: data.rs  events.rs  lib.rs  messages.rs
utils/tsproto-audio/: Cargo.toml
utils/tsproto-commands/: Cargo.toml  README.md  README.tpl
utils/tsproto-commands/src/: errors.rs  lib.rs  messages.rs
utils/tsproto-packets/: Cargo.toml  README.md  README.tpl
utils/tsproto-packets/src/: commands.rs  lib.rs  packets.rs
utils/tsproto-structs/: Cargo.toml  README.md  README.tpl
utils/tsproto-structs/src/: book.rs  book_to_messages.rs  enums.rs  errors.rs  lib.rs  messages.rs  messages_to_book.rs  permissions.rs  versions.rs
utils/tsproto-types/: Cargo.toml  README.md  README.tpl
utils/tsproto-types/src/: crypto.rs  errors.rs  lib.rs  versions.rs
utils/tsproto-util/: Cargo.toml
utils/tsproto-util/src/: BookFfi.tt  VersionDeclarations.tt  book_ffi.rs  error_parser.rs  lib.rs  version_parser.rs
