[package]
name = "gst-plugin-ts3"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
repository = "https://github.com/Flakebi/gst-plugin-ts3"
license = "MIT/Apache-2.0"

[lib]
name = "gstts3"
crate-type = ["cdylib"]

[dependencies]
glib = "0.5"
gstreamer = "0.11"
gstreamer-base = "0.11"
gst-plugin = "0.2"

#[profile.release]
#lto = true
#opt-level = 3
#debug = true
#panic = 'unwind'
