[package]
name = "tsclientlib-ffi"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
build = "build/build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chashmap = "2"
crossbeam = "0.6"
failure = "0.1"
futures = "0.1"
lazy_static = "1"
num = "0.2"
parking_lot = "0.7"
slog = "2"
slog-async = "2"
slog-term = "2"
tokio = "0.1"
tsclientlib = { path = "../tsclientlib", features = ["audio"] }
tsproto = { path = "../tsproto" }
tsproto-audio = { path = "../utils/tsproto-audio" }

[build-dependencies]
tsproto-structs = { path = "../utils/tsproto-structs" }
tsproto-util = { path = "../utils/tsproto-util" }
