[package]
name = "tsclientlib-ffi"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
build = "build/build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
audio = ["tsclientlib/audio", "tsproto-audio"]

[dependencies]
chashmap = "2"
crossbeam = "0.6"
failure = "0.1"
futures = "0.1"
lazy_static = "1"
num = "0.2"
parking_lot = "0.7"
slog = "2"
slog-async = "2"
slog-term = "2"
tokio = "0.1"
tsclientlib = { path = "../tsclientlib" }
tsproto = { path = "../tsproto" }
tsproto-audio = { path = "../utils/tsproto-audio", optional = true }

# Statically link openssl on platforms that use it except linux
[target.'cfg(not(target_os = "linux"))'.dependencies]
native-tls = { version = "0.2", features = ["vendored"] }

[build-dependencies]
t4rust-derive = { git = "https://github.com/ReSpeak/t4rust.git" }
tsproto-structs = { path = "../utils/tsproto-structs" }
tsproto-util = { path = "../utils/tsproto-util" }
