[package]
name = "tsclientlib-ffi"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
build = "build/build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
#audio = ["tsclientlib/audio", "tsproto-audio"]

[dependencies]
chashmap = "2"
color-backtrace = "0.1"
crossbeam = "0.7"
derive_more = "0.14"
failure = "0.1"
ffigen-derive = { path = "../utils/ffigen-derive" }
futures = "0.1"
lazy_static = "1"
num = "0.2"
num-derive = "0.2"
num-traits = "0.2"
parking_lot = "0.7"
slog = "2"
slog-async = "2"
slog-term = "2"
tokio = "0.1"
tsclientlib = { path = "../tsclientlib" }
tsproto = { path = "../tsproto" }
#tsproto-audio = { path = "../utils/tsproto-audio", optional = true }

# Statically link openssl on platforms that use it except linux
[target.'cfg(target_os = "android")'.dependencies]
native-tls = { version = "0.2", features = ["vendored"] }

[build-dependencies]
t4rust-derive = "0.1"
tsproto-structs = { path = "../utils/tsproto-structs" }
