[package]
name = "tsclientlib"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "A library to create TeamSpeak clients and bots."
repository = "https://github.com/ReSpeak/tsclientlib"
readme = "README.md"
keywords = ["teamspeak3", "ts3", "voip"]
categories = ["multimedia"]
license = "MIT OR Apache-2.0"
edition = "2018"
include = [
	"/Cargo.toml",
	"/README.md",
	"**/*.rs",
]

[package.metadata.docs.rs]
features = ["unstable"]

[features]
default = ["audio"]
# Enable the unstable api
unstable = []
audio = ["audiopus"]
# Statically link on windows with this feature, should be default when this is
# stabilized: https://github.com/rust-lang/cargo/issues/7914
bundled = ["sdl2/bundled"]

[dependencies]
audiopus = { version = "0.2", optional = true }
base64 = "0.12"
futures = "0.3"
git-testament = "0.1"
itertools = "0.9"
num-traits = "0.2"
pin-utils = "0.1.0-alpha.4"
rand = "0.7"
reqwest = "0.10"
slog-async = "2"
slog-perf = "0.2"
slog-term = "2"
thiserror = "1"
time = "0.2.15"
tokio = { version = "0.2", features = ["stream", "time"] }
trust-dns-proto = "0.19"
trust-dns-resolver = "0.19"
ts-bookkeeping = { path = "../utils/ts-bookkeeping" }
tsproto = { path = "../tsproto", version = "=0.1.0" }
tsproto-packets = { path = "../utils/tsproto-packets" }
tsproto-types = { path = "../utils/tsproto-types" }
url = "2"

[dependencies.slog]
version = "2"
features = ["max_level_trace", "release_max_level_debug"]

[dev-dependencies]
anyhow = "1"
audiopus = "0.2"
quickcheck = "0.9"
quickcheck_macros = "0.9"
sdl2 = "0.34"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["rt-threaded", "rt-util", "signal"] }
tokio-signal = "0.2"
