[package]
name = "tsclientlib"
version = "0.2.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "A library to create TeamSpeak clients and bots."
repository = "https://github.com/ReSpeak/tsclientlib"
readme = "README.md"
keywords = ["teamspeak3", "ts3", "voip"]
categories = ["multimedia"]
license = "MIT OR Apache-2.0"
edition = "2018"
include = [
	"/Cargo.toml",
	"/README.md",
	"**/*.rs",
]

[package.metadata.docs.rs]
features = ["unstable"]

[features]
default = ["audio"]
# Enable the unstable api
unstable = []
audio = ["audiopus"]
bundled = ["sdl2/bundled"]
static-link = ["sdl2/static-link"]

[dependencies]
audiopus = { version = "0.3.0-rc.0", optional = true }
base64 = "0.13"
futures = "0.3"
git-testament = "0.2"
itertools = "0.10"
num-traits = "0.2"
pin-utils = "0.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["time"] }
tokio-stream = "0.1"
tracing = "0.1"
trust-dns-proto = "0.22"
trust-dns-resolver = "0.22"
ts-bookkeeping = { path = "../utils/ts-bookkeeping", version = "0.1" }
tsproto = { path = "../tsproto", version = "0.2" }
tsproto-packets = { path = "../utils/tsproto-packets", version = "0.1" }
tsproto-types = { path = "../utils/tsproto-types", version = "0.1" }
url = "2"

[dev-dependencies]
anyhow = "1"
audiopus = "0.2"
once_cell = "1"
quickcheck = "1"
quickcheck_macros = "1"
sdl2 = "0.35"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "rt", "signal"] }
tracing-subscriber = "0.3"
