[package]
name = "tsproto-bookkeeping"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
build = "build/build.rs"

[dependencies]
chrono = "0.4"
futures = "0.1"
slog = "2"
tsproto = { path = "../tsproto" }
tsproto-commands = { path = "../tsproto-commands" }

[build-dependencies]
regex = "0.2"
t4rust-derive = { git = "https://github.com/ReSpeak/t4rust.git" }
