[package]
name = "tsproto-commands"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
build = "build/build.rs"

[dependencies]
chrono = "0.4"
failure = "0.1"
futures = "0.1"
num = "0.1"
num-derive = "0.1"
tsproto = { path = "../tsproto" }

[build-dependencies]
tsproto-util = { path = "../tsproto-util" }
