[package]
name = "tsproto-commands"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
build = "build/build.rs"

[dependencies]
chrono = "0.4"
failure = "0.1"
futures = "0.1"
num-traits = "0.2"
num-derive = "0.2"
tsproto = { path = "../tsproto" }
tsproto-structs = { git = "https://github.com/ReSpeak/ts-dev-tools" }

[build-dependencies]
tsproto-util = { path = "../tsproto-util" }
