[package]
name = "tsproto-util"
version = "0.1.0"
authors = ["Splamy <splamyn@gmail.com>"]

[dependencies]
base64 = "0.9"
csv = "1.0.0-beta.5"
regex = "0.2"
serde = "1"
serde_derive = "1"
t4rust-derive = { git = "https://github.com/ReSpeak/t4rust.git" }
toml = "0.4"
tsproto-structs = { git = "https://github.com/ReSpeak/ts-dev-tools.git" }
