[package]
name = "tsproto"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "An implementation of the TeamSpeak3 protocol as a library for use in clients and bots."
repository = "https://github.com/ReSpeak/tsclientlib"
readme = "README.md"
keywords = ["teamspeak3", "ts3", "voip"]
categories = ["multimedia"]
license = "MIT OR Apache-2.0"
edition = "2018"
autobenches = false
include = [
	"/Cargo.toml",
	"/README.md",
	"**/*.rs",
]

[badges]
travis-ci = { repository = "ReSpeak/tsclientlib" }

[dependencies]
aes = "0.3"
base64 = "0.12"
bitflags = "1"
omnom = "3"
curve25519-dalek = "3"
eax = "0.1"
flakebi-ring = "0.16.15"
futures = "0.3"
git-testament = "0.1"
num-bigint = "0.3"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.7"
rug = { version = "1", optional = true, default-features = false, features = ["integer"] }
serde = { version = "1", features = ["derive"] }
slog = "2"
slog-async = "2"
slog-perf = "0.2"
slog-term = "2"
stable_deref_trait = "1"
thiserror = "1"
time = "0.2.15"
tokio = { version = "0.2", features = ["dns", "macros", "sync", "tcp", "time", "udp"] }
tsproto-packets = { path = "../utils/tsproto-packets" }
tsproto-types = { path = "../utils/tsproto-types" }
untrusted = "0.7"
quicklz = "0.3"

[dev-dependencies]
anyhow = "1"
criterion = "0.3"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["rt-threaded", "signal"] }

[dev-dependencies.slog]
version = "2"
features = ["max_level_debug", "release_max_level_debug"]

[[bench]]
name = "modpow"
harness = false

[[bench]]
name = "command"
harness = false

[[bench]]
name = "connect"
harness = false

[[bench]]
name = "license"
harness = false

[[bench]]
name = "message"
harness = false
