[package]
name = "analyzer"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2018"
description = "Analyze recorded TeamSpeak packet logs"

[dependencies]
anyhow = "1"
num-traits = "0.2"
pcap = "0.7"
pnet_packet = "0.25"
structopt = { version = "0.3", default-features = false }
tsproto = { path = "../../tsproto" }
tsproto-packets = { path = "../tsproto-packets" }
