[package]
name = "dev-client"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
edition = "2018"

[dependencies]
chrono = "0.4"
#crossterm = "0.4"
crossterm = { git = "https://github.com/Flakebi/crossterm" }
directories = "1"
failure = "0.1"
futures = "0.1"
lazy_static = "1"
mortal = "0.1"
serde = "1"
serde_derive = "1"
slog-async = "2"
slog-term = "2"
structopt = "0.2"
tokio = "0.1"
toml = "0.4"
#ts-cli-completer = { path = "../cli-completer" }
tsclientlib = { path = "../../tsclientlib" }
tsproto = { path = "../../tsproto" }
unicode-segmentation = "1"
unicode-width = "0.1"

[dependencies.slog]
version = "2"
features = ["max_level_debug", "release_max_level_debug"]
