[package]
name = "ts-bookkeeping"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
license = "OSL-3.0"
edition = "2018"
build = "build/build.rs"
autobenches = false

[dependencies]
anyhow = "1"
base64 = "0.12"
derive_more = "0.99"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1", features = ["derive"] }
slog = "2"
thiserror = "1"
time = { version = "0.2", features = ["serde"] }
tsproto-packets = { path = "../tsproto-packets" }
tsproto-types = { path = "../tsproto-types" }

[build-dependencies]
heck = "0.3"
itertools = "0.9"
t4rust-derive = "0.2"
tsproto-structs = { path = "../tsproto-structs", version = "=0.1.0" }

[dev-dependencies]
criterion = "0.3"
slog-term = "2"

[[bench]]
name = "command"
harness = false
