[package]
name = "tsproto-commands"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
build = "build/build.rs"
edition = "2018"

[dependencies]
chrono = "0.4"
failure = "0.1"
futures = "0.1"
num-traits = "0.2"
num-derive = "0.2"
tsproto = { path = "../../tsproto" }

[build-dependencies]
itertools = "0.8"
t4rust-derive = "0.1.3"
tsproto-structs = { path = "../tsproto-structs" }
tsproto-util = { path = "../tsproto-util" }
