[package]
name = "tsproto-commands"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "Structs for TeamSpeak messages and related resources."
license = "MIT/Apache-2.0"
repository = "https://github.com/ReSpeak/tsclientlib"
readme = "README.md"
keywords = ["TeamSpeak3", "TS3"]
build = "build/build.rs"
edition = "2018"
include = [
	"/Cargo.toml",
	"/README.md",
	"**/*.rs",
]

[dependencies]
base64 = "0.10"
chrono = "0.4"
failure = "0.1"
futures = "0.1"
num-traits = "0.2"
num-derive = "0.2"
serde = { version = "1", features = ["derive"] }
tsproto = { path = "../../tsproto", version = "=0.1.0" }

[build-dependencies]
itertools = "0.8"
t4rust-derive = "0.1.3"
tsproto-structs = { path = "../tsproto-structs", version = "=0.1.0" }
