[package]
name = "tsproto-packets"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
arrayref = "0.3"
base64 = "0.11"
bitflags = "1"
nom = "5"
num-derive = "0.3"
num-traits = "0.2"
omnom = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
