[package]
name = "tsproto-packets"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
repository = "https://github.com/ReSpeak/tsclientlib"
keywords = ["teamspeak3", "ts3"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
arrayref = "0.3"
base64 = "0.13"
bitflags = "1"
num-derive = "0.3"
num-traits = "0.2"
omnom = "3"
rental = "0.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
