[package]
name = "tsproto-structs"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>", "Splamy <splamyn@gmail.com>"]
edition = "2018"
include = [
	"Cargo.toml",
	"src/*.rs",
	"declarations/BookDeclarations.toml",
	"declarations/BookToMessages.toml",
	"declarations/Errors.csv",
	"declarations/Messages.toml",
	"declarations/MessagesToBook.toml",
	"declarations/Versions.csv",
]

[dependencies]
base64 = "0.10"
csv = "1"
lazy_static = "1"
regex = "1"
serde = "1"
serde_derive = "1"
toml = "0.5"
