[package]
name = "tsproto-structs"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>", "Splamy <splamyn@gmail.com>"]
description = "Resource files for several TeamSpeak related data."
license = "OSL-3.0"
repository = "https://github.com/ReSpeak/tsclientlib"
readme = "README.md"
keywords = ["TeamSpeak3", "TS3"]
edition = "2018"
include = [
	"/Cargo.toml",
	"/README.md",
	"/src/*.rs",
	"/declarations/BookDeclarations.toml",
	"/declarations/BookToMessages.toml",
	"/declarations/Errors.csv",
	"/declarations/Messages.toml",
	"/declarations/MessagesToBook.toml",
	"/declarations/Permissions.csv",
	"/declarations/Versions.csv",
]

[dependencies]
base64 = "0.11"
csv = "1"
heck = "0.3"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
