[package]
name = "tsproto-types"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "Basic types and enums that are used within the TeamSpeak protocol."
repository = "https://github.com/ReSpeak/tsclientlib/tree/master/utils/tsproto-types"
readme = "README.md"
keywords = ["teamspeak3", "ts3"]
license = "MIT OR Apache-2.0"
build = "build/build.rs"
edition = "2018"
include = [
	"/Cargo.toml",
	"/README.md",
	"**/*.rs",
	"**/*.tt",
]

[dependencies]
base64 = "0.22"
bitflags = { version = "2", features = ["serde"] }
curve25519-dalek-ng = "4"
elliptic-curve = { version = "0.13", features = ["ecdh"] }
generic-array = "0.14"
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
rand = "0.8"
ref-cast = "1"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.10"
simple_asn1 = "0.6"
thiserror = "1"
time = { version = "0.3", features = ["serde"] }

[build-dependencies]
heck = "0.5"
t4rust-derive = "0.3"
tsproto-structs = { path = "../tsproto-structs", version = "0.2" }
